--- a/models/drugPrescription.ipynb
+++ b/models/drugPrescription.ipynb
@@ -1042,17 +1042,28 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted\n"
+     ]
+    }
+   ],
+   "source": [
+    "#show\n",
+    "print(\"Predicted\")"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-12T17:57:34.266919Z",
-     "start_time": "2024-12-12T17:57:34.263838Z"
+     "end_time": "2024-12-12T18:05:40.921893Z",
+     "start_time": "2024-12-12T18:05:40.916494Z"
     }
    },
    "id": "426eb6edcfdd8e41",
-   "execution_count": 197
+   "execution_count": 199
   },
   {
    "cell_type": "code",
