Complete Model with 2 endpoints

--- a/models/drugPrescription.ipynb
+++ b/models/drugPrescription.ipynb
@@ -661,7 +661,38 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' abdominal_pain' ' acidity' ' altered_sensorium' ' anxiety' ' back_pain'\n",
+      " ' blackheads' ' bladder_discomfort' ' blister' ' bloody_stool'\n",
+      " ' blurred_and_distorted_vision' ' breathlessness' ' bruising'\n",
+      " ' burning_micturition' ' chest_pain' ' chills' ' cold_hands_and_feets'\n",
+      " ' constipation' ' continuous_feel_of_urine' ' continuous_sneezing'\n",
+      " ' cough' ' cramps' ' dark_urine' ' dehydration' ' diarrhoea'\n",
+      " ' dischromic _patches' ' distention_of_abdomen' ' dizziness'\n",
+      " ' excessive_hunger' ' extra_marital_contacts' ' family_history'\n",
+      " ' fatigue' ' foul_smell_of urine' ' headache' ' high_fever'\n",
+      " ' hip_joint_pain' ' indigestion' ' irregular_sugar_level'\n",
+      " ' irritation_in_anus' ' joint_pain' ' knee_pain' ' lack_of_concentration'\n",
+      " ' lethargy' ' loss_of_appetite' ' loss_of_balance' ' mood_swings'\n",
+      " ' movement_stiffness' ' muscle_wasting' ' muscle_weakness' ' nausea'\n",
+      " ' neck_pain' ' nodal_skin_eruptions' ' obesity'\n",
+      " ' pain_during_bowel_movements' ' pain_in_anal_region' ' painful_walking'\n",
+      " ' patches_in_throat' ' pus_filled_pimples' ' red_sore_around_nose'\n",
+      " ' restlessness' ' scurring' ' shivering' ' silver_like_dusting'\n",
+      " ' skin_peeling' ' skin_rash' ' small_dents_in_nails'\n",
+      " ' spotting_ urination' ' stiff_neck' ' stomach_pain' ' sunken_eyes'\n",
+      " ' sweating' ' swelling_joints' ' swelling_of_stomach' ' swollen_legs'\n",
+      " ' ulcers_on_tongue' ' vomiting' ' watering_from_eyes'\n",
+      " ' weakness_in_limbs' ' weakness_of_one_body_side' ' weight_gain'\n",
+      " ' weight_loss' ' yellow_crust_ooze' ' yellowing_of_eyes'\n",
+      " ' yellowish_skin' 'itching']\n"
+     ]
+    }
+   ],
    "source": [
     "mlb = MultiLabelBinarizer()\n",
     "\n",
@@ -672,10 +703,14 @@
     "print(mlb.classes_)  # assuming the symptoms are in a list format\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-19T12:12:38.449814Z",
+     "start_time": "2024-12-19T12:12:38.439602Z"
+    }
    },
    "id": "d8640775111ed724",
-   "execution_count": null
+   "execution_count": 73
   },
   {
    "cell_type": "markdown",
@@ -723,11 +758,75 @@
   {
    "cell_type": "code",
    "outputs": [],
+   "source": [
+    "def getSymptomList():\n",
+    "    return mlb.classes_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-19T12:20:55.163179Z",
+     "start_time": "2024-12-19T12:20:55.158278Z"
+    }
+   },
+   "id": "5e730870042f7f10",
+   "execution_count": 74
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' abdominal_pain' ' acidity' ' altered_sensorium' ' anxiety' ' back_pain'\n",
+      " ' blackheads' ' bladder_discomfort' ' blister' ' bloody_stool'\n",
+      " ' blurred_and_distorted_vision' ' breathlessness' ' bruising'\n",
+      " ' burning_micturition' ' chest_pain' ' chills' ' cold_hands_and_feets'\n",
+      " ' constipation' ' continuous_feel_of_urine' ' continuous_sneezing'\n",
+      " ' cough' ' cramps' ' dark_urine' ' dehydration' ' diarrhoea'\n",
+      " ' dischromic _patches' ' distention_of_abdomen' ' dizziness'\n",
+      " ' excessive_hunger' ' extra_marital_contacts' ' family_history'\n",
+      " ' fatigue' ' foul_smell_of urine' ' headache' ' high_fever'\n",
+      " ' hip_joint_pain' ' indigestion' ' irregular_sugar_level'\n",
+      " ' irritation_in_anus' ' joint_pain' ' knee_pain' ' lack_of_concentration'\n",
+      " ' lethargy' ' loss_of_appetite' ' loss_of_balance' ' mood_swings'\n",
+      " ' movement_stiffness' ' muscle_wasting' ' muscle_weakness' ' nausea'\n",
+      " ' neck_pain' ' nodal_skin_eruptions' ' obesity'\n",
+      " ' pain_during_bowel_movements' ' pain_in_anal_region' ' painful_walking'\n",
+      " ' patches_in_throat' ' pus_filled_pimples' ' red_sore_around_nose'\n",
+      " ' restlessness' ' scurring' ' shivering' ' silver_like_dusting'\n",
+      " ' skin_peeling' ' skin_rash' ' small_dents_in_nails'\n",
+      " ' spotting_ urination' ' stiff_neck' ' stomach_pain' ' sunken_eyes'\n",
+      " ' sweating' ' swelling_joints' ' swelling_of_stomach' ' swollen_legs'\n",
+      " ' ulcers_on_tongue' ' vomiting' ' watering_from_eyes'\n",
+      " ' weakness_in_limbs' ' weakness_of_one_body_side' ' weight_gain'\n",
+      " ' weight_loss' ' yellow_crust_ooze' ' yellowing_of_eyes'\n",
+      " ' yellowish_skin' 'itching']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(getSymptomList())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-19T12:21:18.072012Z",
+     "start_time": "2024-12-19T12:21:18.067258Z"
+    }
+   },
+   "id": "610e949879c80bcd",
+   "execution_count": 76
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "5e730870042f7f10"
+   "id": "6fc995fe5461256f"
   }
  ],
  "metadata": {
